migration to substrate branch polkadot-v0.9.3 updates | nodle staking
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -49,7 +49,7 @@ std = [
   "pallet-transaction-payment-rpc-runtime-api/std",
   "pallet-utility/std",
   "parity-scale-codec/std",
-  "pallet-curveless-staking/std",
+  "pallet-nodle-staking/std",
   "safe-mix/std",
   "serde/std",
   "sp-api/std",
@@ -93,11 +93,11 @@ runtime-benchmarks = [
   "pallet-tcr/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
-  "pallet-curveless-staking/runtime-benchmarks",
+  "pallet-nodle-staking/runtime-benchmarks",
   "sp-runtime/runtime-benchmarks",
 ]
 with-staking = [
-	"pallet-curveless-staking",
+	"pallet-nodle-staking",
 ]
 
 [dependencies]
@@ -160,7 +160,7 @@ pallet-root-of-trust = { default-features = false, path = "../pallets/root-of-tr
 pallet-root-of-trust-runtime-api = { default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
 pallet-tcr = { default-features = false, path = "../pallets/tcr" }
 pallet-poa = { default-features = false, path = "../pallets/poa" }
-pallet-curveless-staking = { default-features = false, path = "../pallets/pallet-curveless-staking", optional = true }
+pallet-nodle-staking = { default-features = false, path = "../pallets/nodle-staking", optional = true }
 pallet-grants = { default-features = false, path = "../pallets/grants" }
 # pallet-mandate = { version = "2.0.8", default-features = false }
 
