--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -17,7 +17,9 @@ runtime-benchmarks = [
 cli = [
 	"nodle-chain-executor/wasmi-errno",
 ]
-with-staking = []
+with-staking = [
+	"nodle-chain-runtime/with-staking",
+]
 
 [package.metadata.wasm-pack.profile.release]
 # `wasm-opt` has some problems on linux, see
