attempt to free more space

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,10 @@ jobs:
 
     - name: Cleanup ubuntu filesystem
       if: matrix.os == 'ubuntu-latest'
-      run: sudo apt clean
+      run: |
+        sudo apt clean
+        sudo rm -rf "/usr/local/share/boost"
+        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
 
     - name: Setup toolchain
       run: ./scripts/init.sh
