--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,11 @@ jobs:
     - name: Setup toolchain
       run: ./scripts/init.sh
 
+    - name: Cargo check
+      run: SKIP_WASM_BUILD= cargo check --all-targets --all-features --workspace
+
     - name: Run tests
-      run: cargo test --all-targets --all-features --workspace
+      run: SKIP_WASM_BUILD= cargo test --all-targets --all-features --workspace
 
   fmt:
     runs-on: ubuntu-latest
