docker on branches too

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,11 @@
 name: Create artefacts for release
 
-on: [ release ]
+on:
+  release:
+  push:
+    branches:
+      - 'master'
+      - 'eliott/gitops'
 
 jobs:
 
