--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -21,8 +21,7 @@ jobs:
         uses: chevdor/srtool-actions@v0.2.0
         with:
           chain: ${{ matrix.chain }}
-          tag: 1.53.0-0.9.15
-          runtime_dir: runtime/${{ matrix.chain }}
+          runtime_dir: runtime
 
       - name: Summary
         run: |
