--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,11 +51,22 @@ jobs:
     - name: Setup toolchain
       run: ./scripts/init.sh
 
+    - name: Install tarpaulin
+      run: cargo install cargo-tarpaulin
+
     - name: Cargo check
       run: SKIP_WASM_BUILD= cargo check --all-targets --all-features --workspace
 
-    - name: Run tests
-      run: SKIP_WASM_BUILD= cargo test --all-targets --all-features --workspace
+    - name: Generate coverage report
+      run: cargo +nightly tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml
+
+    - name: Upload to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        fail_ci_if_error: true
+
+    # - name: Run tests
+    #   run: SKIP_WASM_BUILD= cargo test --all-targets --all-features --workspace
 
   fmt:
     runs-on: ubuntu-latest
