--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        chain: ["arcadia", "main"]
+        chain: ["nodle-chain"]
 
     steps:
       - uses: actions/checkout@v2
