retry srtool without compressed runtime

--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -2,7 +2,7 @@ name: Srtool
 
 on:
   push:
-    branches: master
+    branches: eliott/gitops
 
 jobs:
   srtool:
@@ -33,5 +33,14 @@ jobs:
           name: ${{ matrix.chain }}-runtime-${{ github.sha }}
           path: |
             ${{ steps.srtool_build.outputs.wasm }}
-            ${{ steps.srtool_build.outputs.wasm_compressed }}
             ${{ matrix.chain }}-srtool-digest.json
+
+      # TODO: once supported, upload compressed runtime too
+      # - name: Archive Runtime
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: ${{ matrix.chain }}-runtime-${{ github.sha }}
+      #     path: |
+      #       ${{ steps.srtool_build.outputs.wasm }}
+      #       ${{ steps.srtool_build.outputs.wasm_compressed }}
+      #       ${{ matrix.chain }}-srtool-digest.json
