rename docker workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,11 +1,6 @@
-name: Create artefacts for release
+name: Docker
 
-on:
-  release:
-  push:
-    branches:
-      - 'master'
-      - 'eliott/gitops'
+on: [ push ]
 
 jobs:
 
