ignore digest for now

--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -33,8 +33,9 @@ jobs:
           name: ${{ matrix.chain }}-runtime-${{ github.sha }}
           path: |
             ${{ steps.srtool_build.outputs.wasm }}
-            ${{ matrix.chain }}-srtool-digest.json
 
+      # ${{ matrix.chain }}-srtool-digest.json
+      
       # TODO: once supported, upload compressed runtime too
       # - name: Archive Runtime
       #   uses: actions/upload-artifact@v2
