--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -34,7 +34,12 @@ jobs:
           path: |
             ${{ steps.srtool_build.outputs.wasm }}
 
-      # ${{ matrix.chain }}-srtool-digest.json
+      - name: Archive Metadata
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.chain }}-srtool-digest.json
+          path: |
+            ${{ matrix.chain }}-srtool-digest.json
       
       # TODO: once supported, upload compressed runtime too
       # - name: Archive Runtime
