add wasm extension

--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Archive Runtime
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.chain }}-runtime-${{ github.sha }}
+          name: ${{ matrix.chain }}-runtime-${{ github.sha }}.compact.wasm
           path: |
             ${{ steps.srtool_build.outputs.wasm }}
 
