move and rename runtime to one subfolder

--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 parity-scale-codec = "2.2.0"
 nodle-chain-primitives = { path = "../primitives" }
-nodle-chain-runtime = { path = "../runtime" }
+nodle-chain-main-runtime = { path = "../runtimes/main" }
 sc-executor = "0.9.0"
 sp-core = "3.0.0"
 sp-io = "3.0.0"
