--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -12,13 +12,13 @@ path = "src/main.rs"
 [features]
 default = [ "cli" ]
 runtime-benchmarks = [
-	"nodle-chain-runtime/runtime-benchmarks",
+	"nodle-chain-main-runtime/runtime-benchmarks",
 ]
 cli = [
 	"nodle-chain-executor/wasmi-errno",
 ]
 with-staking = [
-	"nodle-chain-runtime/with-staking",
+	"nodle-chain-main-runtime/with-staking",
 ]
 
 [package.metadata.wasm-pack.profile.release]
@@ -39,7 +39,7 @@ futures = { version = "0.3.16", features = ["compat"] }
 jsonrpc-core = "15.1.0"
 nodle-chain-executor = { path = "../executor" }
 nodle-chain-primitives = { path = "../primitives" }
-nodle-chain-runtime = { path = "../runtime" }
+nodle-chain-main-runtime = { path = "../runtimes/main" }
 pallet-contracts = "3.0.0"
 pallet-contracts-rpc = "3.0.0"
 pallet-im-online = { version = "3.0.0", default-features = false }
