--- a/runtimes/main/Cargo.toml
+++ b/runtimes/main/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
-name = "nodle-chain-runtime"
+name = "nodle-chain-main-runtime"
 version = "2.0.12"
 
 [features]
@@ -99,9 +99,9 @@ frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
 frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true }
 frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
-nodle-chain-primitives = { default-features = false, path = "../primitives" }
-pallet-allocations = { default-features = false, path = "../pallets/allocations" }
-pallet-amendments = { default-features = false, path = "../pallets/amendments" }
+nodle-chain-primitives = { default-features = false, path = "../../primitives" }
+pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
+pallet-amendments = { default-features = false, path = "../../pallets/amendments" }
 pallet-authority-discovery = { version = "3.0.0", default-features = false }
 pallet-authorship = { version = "3.0.0", default-features = false }
 pallet-babe = { version = "3.0.0", default-features = false }
@@ -110,25 +110,25 @@ pallet-collective = { version = "3.0.0", default-features = false }
 pallet-contracts = { version = "3.0.0", default-features = false }
 pallet-contracts-primitives = { version = "3.0.0", default-features = false }
 pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false }
-pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
+pallet-emergency-shutdown = { default-features = false, path = "../../pallets/emergency-shutdown" }
 pallet-grandpa = { version = "3.0.0", default-features = false }
-pallet-grants = { default-features = false, path = "../pallets/grants" }
+pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-im-online = { version = "3.0.0", default-features = false }
 pallet-mandate = { version = "2.0.8", default-features = false }
 pallet-membership = { version = "3.0.0", default-features = false }
 pallet-multisig = { version = "3.0.0", default-features = false }
 pallet-offences = { version = "3.0.0", default-features = false }
-pallet-poa = { default-features = false, path = "../pallets/poa" }
-pallet-nodle-staking = { default-features = false, path = "../pallets/nodle-staking", optional = true }
+pallet-poa = { default-features = false, path = "../../pallets/poa" }
+pallet-nodle-staking = { default-features = false, path = "../../pallets/nodle-staking", optional = true }
 pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
-pallet-reserve = { default-features = false, path = "../pallets/reserve" }
-pallet-root-of-trust = { default-features = false, path = "../pallets/root-of-trust" }
-pallet-root-of-trust-runtime-api = { default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
+pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
+pallet-root-of-trust = { default-features = false, path = "../../pallets/root-of-trust" }
+pallet-root-of-trust-runtime-api = { default-features = false, path = "../../pallets/root-of-trust/rpc/runtime-api" }
 pallet-scheduler = { version = "3.0.0", default-features = false }
 pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
 #pallet-session-benchmarking = { default-features = false, optional = true }
 pallet-staking = { version = "3.0.0", default-features = false }
-pallet-tcr = { default-features = false, path = "../pallets/tcr" }
+pallet-tcr = { default-features = false, path = "../../pallets/tcr" }
 pallet-timestamp = { version = "3.0.0", default-features = false }
 pallet-transaction-payment = { version = "3.0.0", default-features = false }
 pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
