remove nodle_ and nodle_chain_ prefixes

--- a/runtimes/main/Cargo.toml
+++ b/runtimes/main/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
-name = "nodle-chain-main-runtime"
+name = "runtime-main"
 version = "2.0.12"
 
 [features]
@@ -10,7 +10,6 @@ std = [
   "frame-executive/std",
   "frame-support/std",
   "frame-system/std",
-  "nodle-chain-primitives/std",
   "frame-system-rpc-runtime-api/std",
   "pallet-allocations/std",
   "pallet-amendments/std",
@@ -43,6 +42,7 @@ std = [
   "pallet-transaction-payment-rpc-runtime-api/std",
   "pallet-utility/std",
   "parity-scale-codec/std",
+  "primitives/std",
   "safe-mix/std",
   "serde",
   "sp-api/std",
@@ -93,7 +93,6 @@ frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
 frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true }
 frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
-nodle-chain-primitives = { default-features = false, path = "../../primitives" }
 pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
 pallet-amendments = { default-features = false, path = "../../pallets/amendments" }
 pallet-authority-discovery = { version = "3.0.0", default-features = false }
@@ -118,14 +117,19 @@ pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
 pallet-root-of-trust = { default-features = false, path = "../../pallets/root-of-trust" }
 pallet-root-of-trust-runtime-api = { default-features = false, path = "../../pallets/root-of-trust/rpc/runtime-api" }
 pallet-scheduler = { version = "3.0.0", default-features = false }
-pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
+pallet-session = { version = "3.0.0", default-features = false, features = [
+  "historical",
+] }
 #pallet-session-benchmarking = { default-features = false, optional = true }
 pallet-tcr = { default-features = false, path = "../../pallets/tcr" }
 pallet-timestamp = { version = "3.0.0", default-features = false }
 pallet-transaction-payment = { version = "3.0.0", default-features = false }
 pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
 pallet-utility = { version = "3.0.0", default-features = false }
-parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
+parity-scale-codec = { version = "2.2.0", default-features = false, features = [
+  "derive",
+] }
+primitives = { default-features = false, path = "../../primitives" }
 safe-mix = { version = "1.0.1", default-features = false }
 serde = { version = "1.0.129", optional = true, features = ["derive"] }
 sp-api = { version = "3.0.0", default-features = false }
