--- a/runtimes/staking/Cargo.toml
+++ b/runtimes/staking/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
-name = "nodle-chain-staking-runtime"
+name = "runtime-staking"
 version = "2.0.12"
 
 [features]
@@ -10,7 +10,6 @@ std = [
   "frame-executive/std",
   "frame-support/std",
   "frame-system/std",
-  "nodle-chain-primitives/std",
   "frame-system-rpc-runtime-api/std",
   "pallet-authority-discovery/std",
   "pallet-authorship/std",
@@ -22,16 +21,17 @@ std = [
   "pallet-mandate/std",
   "pallet-membership/std",
   "pallet-multisig/std",
-  "pallet-nodle-staking/std",
   "pallet-offences/std",
   "pallet-randomness-collective-flip/std",
   "pallet-scheduler/std",
   "pallet-session/std",
+  "pallet-staking/std",
   "pallet-timestamp/std",
   "pallet-transaction-payment/std",
   "pallet-transaction-payment-rpc-runtime-api/std",
   "pallet-utility/std",
   "parity-scale-codec/std",
+  "primitives/std",
   "safe-mix/std",
   "serde",
   "sp-api/std",
@@ -61,8 +61,8 @@ runtime-benchmarks = [
   "pallet-grandpa/runtime-benchmarks",
   "pallet-im-online/runtime-benchmarks",
   "pallet-multisig/runtime-benchmarks",
-  "pallet-nodle-staking/runtime-benchmarks",
   "pallet-scheduler/runtime-benchmarks",
+  "pallet-staking/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
   "sp-runtime/runtime-benchmarks",
@@ -75,7 +75,6 @@ frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
 frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true }
 frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
-nodle-chain-primitives = { default-features = false, path = "../../primitives" }
 pallet-authority-discovery = { version = "3.0.0", default-features = false }
 pallet-authorship = { version = "3.0.0", default-features = false }
 pallet-babe = { version = "3.0.0", default-features = false }
@@ -87,16 +86,21 @@ pallet-mandate = { version = "2.0.8", default-features = false }
 pallet-membership = { version = "3.0.0", default-features = false }
 pallet-multisig = { version = "3.0.0", default-features = false }
 pallet-offences = { version = "3.0.0", default-features = false }
-pallet-nodle-staking = { default-features = false, path = "../../pallets/nodle-staking" }
 pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
 pallet-scheduler = { version = "3.0.0", default-features = false }
-pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
+pallet-session = { version = "3.0.0", default-features = false, features = [
+  "historical",
+] }
 #pallet-session-benchmarking = { default-features = false, optional = true }
+pallet-staking = { default-features = false, path = "../../pallets/staking" }
 pallet-timestamp = { version = "3.0.0", default-features = false }
 pallet-transaction-payment = { version = "3.0.0", default-features = false }
 pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
 pallet-utility = { version = "3.0.0", default-features = false }
-parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
+parity-scale-codec = { version = "2.2.0", default-features = false, features = [
+  "derive",
+] }
+primitives = { default-features = false, path = "../../primitives" }
 safe-mix = { version = "1.0.1", default-features = false }
 serde = { version = "1.0.129", optional = true, features = ["derive"] }
 sp-api = { version = "3.0.0", default-features = false }
