--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -10,13 +10,9 @@ name = "nodle-chain"
 path = "src/main.rs"
 
 [features]
-default = [ "cli" ]
-runtime-benchmarks = [
-	"nodle-chain-main-runtime/runtime-benchmarks",
-]
-cli = [
-	"sc-executor/wasmi-errno",
-]
+default = ["cli"]
+runtime-benchmarks = ["runtime-main/runtime-benchmarks"]
+cli = ["sc-executor/wasmi-errno"]
 
 [package.metadata.wasm-pack.profile.release]
 # `wasm-opt` has some problems on linux, see
@@ -24,25 +20,29 @@ cli = [
 wasm-opt = false
 
 [target.'cfg(target_arch="x86_64")'.dependencies]
-sc-cli = { version = "0.9.0", features = [ "wasmtime" ] }
-sc-executor = { version = "0.9.0", features = [ "wasmtime" ] }
-sc-service = { version = "0.9.0", default-features = false, features = [ "wasmtime" ] }
-sp-trie = { version = "3.0.0", default-features = false, features = ["memory-tracker"] }
+sc-cli = { version = "0.9.0", features = ["wasmtime"] }
+sc-executor = { version = "0.9.0", features = ["wasmtime"] }
+sc-service = { version = "0.9.0", default-features = false, features = [
+	"wasmtime",
+] }
+sp-trie = { version = "3.0.0", default-features = false, features = [
+	"memory-tracker",
+] }
 
 [dependencies]
 frame-benchmarking = { version = "3.1.0", default-features = false }
 frame-benchmarking-cli = { version = "3.0.0", default-features = false }
 futures = { version = "0.3.16", features = ["compat"] }
 jsonrpc-core = "15.1.0"
-nodle-chain-primitives = { path = "../primitives" }
-nodle-chain-main-runtime = { path = "../runtimes/main" }
-nodle-chain-staking-runtime = { path = "../runtimes/staking" }
 pallet-contracts = "3.0.0"
 pallet-contracts-rpc = "3.0.0"
 pallet-im-online = { version = "3.0.0", default-features = false }
-pallet-root-of-trust-rpc  = { path = "../pallets/root-of-trust/rpc" }
-pallet-nodle-staking = { default-features = false, path = "../pallets/nodle-staking", optional = true }
+pallet-root-of-trust-rpc = { path = "../pallets/root-of-trust/rpc" }
+pallet-staking = { default-features = false, path = "../pallets/staking", optional = true }
 pallet-transaction-payment-rpc = "3.0.0"
+primitives = { path = "../primitives" }
+runtime-main = { path = "../runtimes/main" }
+runtime-staking = { path = "../runtimes/staking" }
 sc-authority-discovery = "0.9.0"
 sc-basic-authorship = "0.9.0"
 sc-cli = "0.9.0"
