make node work with runtime_main

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -42,7 +42,7 @@ pallet-staking = { default-features = false, path = "../pallets/staking", option
 pallet-transaction-payment-rpc = "3.0.0"
 primitives = { path = "../primitives" }
 runtime-main = { path = "../runtimes/main" }
-runtime-staking = { path = "../runtimes/staking" }
+#runtime-staking = { path = "../runtimes/staking" }
 sc-authority-discovery = "0.9.0"
 sc-basic-authorship = "0.9.0"
 sc-cli = "0.9.0"
