upgrade to polkadot-v0.9.12
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,19 @@
 [workspace]
 members = [
-	"executor",
-	"node",
-	"pallets/*",
-	"primitives",
-	"runtime",
-	"support",
+  "pallets/allocations",
+  "pallets/amendments",
+  "pallets/emergency-shutdown",
+  "pallets/grants",
+  "pallets/poa",
+  "pallets/reserve",
+  "pallets/tcr",
+  "pallets/root-of-trust",
+  "pallets/nodle-staking",
+  "pallets/mandate",
+  "primitives",
+  "runtime",
+  "executor",
+  "node"
 ]
 
 [profile.release]
