--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -5,11 +5,12 @@ authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
 
 [dependencies]
-frame-system = { version = "3.0.0", default-features = false }
 parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
-sp-application-crypto = { version = "3.0.0", default-features = false }
-sp-core = { version = "3.0.0", default-features = false }
-sp-runtime = { version = "3.0.0", default-features = false }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
+sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
 
 [features]
 default = ["std"]
