--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -5,16 +5,16 @@ authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
 
 [dependencies]
-parity-scale-codec = "2.2.0"
+parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
+trie-root = { version = "0.16.0", default-features = false }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 nodle-chain-primitives = { path = "../primitives" }
 nodle-chain-runtime = { path = "../runtime" }
-sc-executor = "0.9.0"
-sp-core = "3.0.0"
-sp-io = "3.0.0"
-sp-state-machine = "0.9.0"
-sp-trie = "3.0.0"
-trie-root = "0.16.0"
-frame-benchmarking = "3.1.0"
 
 [features]
 wasmtime = [
