--- a/pallets/mandate/Cargo.toml
+++ b/pallets/mandate/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "pallet-emergency-shutdown"
-version = "2.0.12"
+name = "pallet-mandate"
+version = "2.0.8"
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
 
@@ -12,7 +12,6 @@ std = [
   "scale-info/std",
   "frame-support/std",
   "frame-system/std",
-  "pallet-balances/std",
   "sp-io/std",
   "sp-runtime/std",
   "sp-std/std",
@@ -30,10 +29,7 @@ scale-info = { version = "1.0", default-features = false, features = ["derive"] 
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.12" }
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
-
-[dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
