upgrade to polkadot-v0.9.12
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,22 @@
 [workspace]
 members = [
-	"node",
-	"pallets/*",
-	"primitives",
-	"runtimes/*",
-	"support",
+  "support",
+  "pallets/emergency-shutdown",
+  "pallets/allocations",
+  "pallets/amendments",
+  "pallets/grants",
+  "pallets/poa",
+  "pallets/reserve",
+  "pallets/tcr",
+  "pallets/root-of-trust",
+  "pallets/root-of-trust/rpc",
+  "pallets/root-of-trust/rpc/runtime-api",
+  "pallets/staking",
+  "pallets/mandate",
+  "primitives",
+  "runtimes/main",
+  "runtimes/staking",
+  "node",
 ]
 
 [profile.release]
