review comments fix
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,10 @@
 [workspace]
 members = [
-  "support",
-  "pallets/emergency-shutdown",
-  "pallets/allocations",
-  "pallets/amendments",
-  "pallets/grants",
-  "pallets/poa",
-  "pallets/reserve",
-  "pallets/tcr",
-  "pallets/root-of-trust",
-  "pallets/root-of-trust/rpc",
-  "pallets/root-of-trust/rpc/runtime-api",
-  "pallets/staking",
-  "pallets/mandate",
-  "primitives",
-  "runtimes/main",
-  "runtimes/staking",
   "node",
+  "pallets/*",
+  "primitives",
+  "runtimes/*",
+  "support",
 ]
 
 [profile.release]
