--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,18 +13,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Cache cargo registry  
-      uses: actions/cache@v2.1.6  
-      with: 
-        path: ~/.cargo/registry 
+    - name: Cache cargo registry
+      uses: actions/cache@v2.1.6
+      with:
+        path: ~/.cargo/registry
         key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-registry-
 
-    - name: Cache cargo index 
-      uses: actions/cache@v2.1.6  
-      with: 
-        path: ~/.cargo/git  
+    - name: Cache cargo index
+      uses: actions/cache@v2.1.6
+      with:
+        path: ~/.cargo/git
         key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-index-
@@ -52,13 +52,13 @@ jobs:
       run: ./scripts/init.sh
 
     - name: Install tarpaulin
-      run: cargo install cargo-tarpaulin
+      run: cargo install cargo-tarpaulin --version 0.18.3
 
     - name: Cargo check
       run: SKIP_WASM_BUILD= cargo check --all-targets --all-features --workspace
 
-    - name: Generate coverage report
-      run: cargo +nightly tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml
+    # - name: Generate coverage report
+    #   run: cargo +nightly tarpaulin --verbose --all-features --workspace --avoid-cfg-tarpaulin --timeout 120 --out Xml
 
     - name: Upload to Codecov
       uses: codecov/codecov-action@v2.0.3
