ci workflow bringup
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,12 +58,12 @@ jobs:
       run: SKIP_WASM_BUILD= cargo check --all-targets --all-features --workspace
 
     # - name: Generate coverage report
-    #   run: cargo +nightly tarpaulin --verbose --all-features --workspace --avoid-cfg-tarpaulin --timeout 120 --out Xml
+    #   run: cargo +nightly tarpaulin --avoid-cfg-tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml
 
-    - name: Upload to Codecov
-      uses: codecov/codecov-action@v2.0.3
-      with:
-        fail_ci_if_error: true
+    # - name: Upload to Codecov
+    #   uses: codecov/codecov-action@v2.0.3
+    #   with:
+    #     fail_ci_if_error: true
 
     # - name: Run tests
     #   run: SKIP_WASM_BUILD= cargo test --all-targets --all-features --workspace
