--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -21,6 +21,7 @@ jobs:
         uses: chevdor/srtool-actions@v0.3.0
         with:
           chain: ${{ matrix.runtime }}
+          package: runtime-${{ matrix.runtime }}
           runtime_dir: runtimes/${{ matrix.runtime }}
 
       - name: Summary
