--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -23,6 +23,7 @@ jobs:
           chain: ${{ matrix.runtime }}
           package: runtime-${{ matrix.runtime }}
           runtime_dir: runtimes/${{ matrix.runtime }}
+          tag: 1.55.0
 
       - name: Summary
         run: |
