--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Archive Runtime
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.runtime }}-runtime-${{ github.sha }}.compact.wasm
+          name: ${{ matrix.runtime }-${{ github.sha }}.compact.wasm
           path: |
             ${{ steps.srtool_build.outputs.wasm }}
 
@@ -49,7 +49,7 @@ jobs:
       # - name: Archive Runtime
       #   uses: actions/upload-artifact@v2
       #   with:
-      #     name: ${{ matrix.runtime }}-runtime-${{ github.sha }}
+      #     name: ${{ matrix.runtime }}-${{ github.sha }}
       #     path: |
       #       ${{ steps.srtool_build.outputs.wasm }}
       #       ${{ steps.srtool_build.outputs.wasm_compressed }}
