fix github action issues

--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -23,7 +23,7 @@ jobs:
           chain: ${{ matrix.runtime }}
           package: runtime-${{ matrix.runtime }}
           runtime_dir: runtimes/${{ matrix.runtime }}
-          tag: 1.55.0
+          tag: 1.56.1
 
       - name: Summary
         run: |
@@ -34,7 +34,7 @@ jobs:
       - name: Archive Runtime
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.runtime }-${{ github.sha }}.compact.wasm
+          name: ${{ matrix.runtime }}-${{ github.sha }}.compact.wasm
           path: |
             ${{ steps.srtool_build.outputs.wasm }}
 
