--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,18 +52,29 @@ jobs:
       run: ./scripts/init.sh
 
     - name: Install tarpaulin
-      run: cargo install cargo-tarpaulin --version 0.18.3
+      run: |
+        cargo install cargo-tarpaulin --version 0.18.4 && \
+        rustup install nightly-2021-11-01
 
     - name: Cargo check
       run: SKIP_WASM_BUILD= cargo check --all-targets --all-features --workspace
 
-    # - name: Generate coverage report
-    #   run: cargo +nightly tarpaulin --avoid-cfg-tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml
+    - name: Generate coverage report
+      run: |
+        cargo \
+          +nightly-2021-05-11 \
+          tarpaulin \
+          --avoid-cfg-tarpaulin \
+          --verbose \
+          --all-features \
+          --workspace \
+          --timeout 120 \
+          --out Xml
 
-    # - name: Upload to Codecov
-    #   uses: codecov/codecov-action@v2.0.3
-    #   with:
-    #     fail_ci_if_error: true
+    - name: Upload to Codecov
+      uses: codecov/codecov-action@v2.0.3
+      with:
+        fail_ci_if_error: true
 
     # - name: Run tests
     #   run: SKIP_WASM_BUILD= cargo test --all-targets --all-features --workspace
