--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,9 +53,7 @@ jobs:
 
     - name: Install tarpaulin
       run: |
-        cargo install cargo-tarpaulin --version 0.18.4 && \
-        rustup install nightly-2021-11-01 && \
-        rustup target add wasm32-unknown-unknown --toolchain nightly-2021-11-01
+        cargo install cargo-tarpaulin --version 0.18.4
 
     - name: Cargo check
       run: SKIP_WASM_BUILD= cargo check --all-targets --all-features --workspace
@@ -63,9 +61,7 @@ jobs:
     - name: Generate coverage report
       run: |
         cargo \
-          +nightly-2021-11-01 \
           tarpaulin \
-          --avoid-cfg-tarpaulin \
           --verbose \
           --all-features \
           --workspace \
