--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
       run: SKIP_WASM_BUILD= cargo check --all-targets --all-features --workspace
 
     - name: Generate coverage report
+      uses: dtolnay/rust-toolchain@nightly-2021-11-01
       run: |
         cargo \
           tarpaulin \
