--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: dtolnay/rust-toolchain@nightly-2021-11-01
 
     - name: Cache cargo registry
       uses: actions/cache@v2.1.6
@@ -59,7 +60,6 @@ jobs:
       run: SKIP_WASM_BUILD= cargo check --all-targets --all-features --workspace
 
     - name: Generate coverage report
-      uses: dtolnay/rust-toolchain@nightly-2021-11-01
       run: |
         cargo \
           tarpaulin \
