ci workflow fix
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: dtolnay/rust-toolchain@nightly-2021-11-01
 
     - name: Cache cargo registry
       uses: actions/cache@v2.1.6
@@ -54,6 +53,7 @@ jobs:
 
     - name: Install tarpaulin
       run: |
+        rustup toolchain install $(cat rust-toolchain)
         cargo install cargo-tarpaulin --version 0.18.4
 
     - name: Cargo check
@@ -62,6 +62,7 @@ jobs:
     - name: Generate coverage report
       run: |
         cargo \
+          +$(cat rust-toolchain) \
           tarpaulin \
           --verbose \
           --all-features \
