ci workflow fix
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
     - name: Install tarpaulin
       run: |
         rustup toolchain install $(cat rust-toolchain)
+        rustup target add --toolchain $(cat rust-toolchain) wasm32-unknown-unknown
         cargo install cargo-tarpaulin --version 0.18.4
 
     - name: Cargo check
