ci workflow fix
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         os: [ubuntu-latest]
         toolchain:
           - nightly
-        target: [ "x86_64-unknown-linux-gnu", "wasm32-unknown-unknown" ]
+        target: [ "wasm32-unknown-unknown" ]
     steps:
     - uses: actions/checkout@v2
 
@@ -69,12 +69,7 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: tarpaulin
-        args: |
-          --verbose \
-          --all-features \
-          --workspace \
-          --timeout 120 \
-          --out Xml
+        args: --verbose --all-features --workspace --timeout 120 --out Xml
 
     - name: Cargo check
       uses: actions-rs/cargo@v1
