ci workflow fix
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         toolchain:
-          - nightly
+          - nightly-2021-11-01
         target: [ "wasm32-unknown-unknown" ]
     steps:
     - uses: actions/checkout@v2
@@ -55,6 +55,8 @@ jobs:
       with:
         profile: minimal
         toolchain: ${{ matrix.toolchain }}
+        override: true
+        components: rustfmt, rustc-dev
 
     - name: Add target
       run: rustup target add ${{ matrix.target }}
@@ -74,7 +76,7 @@ jobs:
     - name: Cargo check
       uses: actions-rs/cargo@v1
       env:
-        SKIP_WASM_BUILD: '='
+        SKIP_WASM_BUILD: ' '
       with:
         command: check
         args: --all-targets --all-features --workspace
