--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,42 +2,20 @@ name: Test rust code
 
 on: [push, pull_request]
 
-jobs:
+env:
+  nightly: nightly-2021-11-01
+  target: "wasm32-unknown-unknown"
 
+jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest]
-        toolchain:
-          - nightly-2021-11-01
-        target: [ "wasm32-unknown-unknown" ]
+
     steps:
     - uses: actions/checkout@v2
-
-    - name: Cache cargo registry
-      uses: actions/cache@v2.1.6
-      with:
-        path: ~/.cargo/registry
-        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-registry-
-
-    - name: Cache cargo index
-      uses: actions/cache@v2.1.6
-      with:
-        path: ~/.cargo/git
-        key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-index-
-
-    - name: Cache cargo build
-      uses: actions/cache@v2.1.6
-      with:
-        path: target
-        key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-build-target-
+    - uses: Swatinem/rust-cache@v1
 
     - name: Install ubuntu native dependencies
       if: matrix.os == 'ubuntu-latest'
@@ -53,13 +31,12 @@ jobs:
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
-        profile: minimal
-        toolchain: ${{ matrix.toolchain }}
+        toolchain: ${{ env.nightly }}
         override: true
         components: rustfmt, rustc-dev
 
     - name: Add target
-      run: rustup target add ${{ matrix.target }}
+      run: rustup target add ${{ env.target }}
 
     - name: Install Tarpaulin
       uses: actions-rs/cargo@v1
