ci workflow fix
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       uses: actions-rs/tarpaulin@v0.1
       with:
         version: '0.18.4'
-        args: '--verbose --all-features --workspace --timeout 120 --out Xml'
+        args: '+${{ env.nightly }} --verbose --all-features --workspace --timeout 120 --out Xml'
 
     - name: Upload to Codecov
       uses: codecov/codecov-action@v2.0.3
