--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
         cargo \
         +${{ env.nightly }} \
         tarpaulin \
+        --avoid-cfg-tarpaulin \
         --verbose \
         --all-features \
         --workspace \
