ci workflow fix
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,23 +25,14 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: sudo apt install -y cmake pkg-config libssl-dev git build-essential clang libclang-dev
 
-    - name: Install cargo-tarpaulin
-      uses: actions-rs/cargo@v1
-      with:
-        command: install
-        args: 'cargo-tarpaulin --version 0.18.4'
+    - name: Install wasm target
+      run: rustup target add --toolchain ${{ env.nightly }} ${{ env.target }}
 
-    - name: Generate coverage report
-      run: |
-        cargo \
-        +${{ env.nightly }} \
-        tarpaulin \
-        --avoid-cfg-tarpaulin \
-        --verbose \
-        --all-features \
-        --workspace \
-        --timeout 120 \
-        --out Xml
+    - name: Run cargo-tarpaulin
+      uses: actions-rs/tarpaulin@v0.1
+      with:
+        version: '0.18.4'
+        args: '--avoid-cfg-tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml'
 
     - name: Upload to Codecov
       uses: codecov/codecov-action@v2.0.3
