--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,8 @@ on: [push, pull_request]
 
 env:
   nightly: nightly-2021-11-01
-  target: "wasm32-unknown-unknown"
+  target: wasm32-unknown-unknown
+  tarpaulin-vers: '0.18.4'
 
 jobs:
   test:
@@ -15,32 +16,53 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: Swatinem/rust-cache@v1
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: ${{ env.nightly }}
         override: true
+        target: ${{wasm32-unknown-unknown}}
+
+    - name: Cache cargo registry
+      uses: actions/cache@v2.1.6
+      with:
+        path: ~/.cargo/registry
+        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-registry-
+
+    - name: Cache cargo index
+      uses: actions/cache@v2.1.6
+      with:
+        path: ~/.cargo/git
+        key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-index-
+
+    - name: Cache cargo build
+      uses: actions/cache@v2.1.6
+      with:
+        path: target
+        key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-build-target-
 
     - name: Install ubuntu native dependencies
       if: matrix.os == 'ubuntu-latest'
       run: sudo apt install -y cmake pkg-config libssl-dev git build-essential clang libclang-dev
 
-    - name: Install wasm target
-      run: rustup target add --toolchain ${{ env.nightly }} ${{ env.target }}
-
     - name: Run cargo-tarpaulin
       uses: actions-rs/tarpaulin@v0.1
       with:
-        version: '0.18.4'
-        args: '--avoid-cfg-tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml'
+        version: ${{ env.tarpaulin-vers }}
+        args: '--avoid-cfg-tarpaulin --verbose --all-features --workspace --timeout 120'
 
     - name: Upload to Codecov
       uses: codecov/codecov-action@v2.0.3
       with:
         fail_ci_if_error: true
 
-    # - name: Run tests
-    #   run: SKIP_WASM_BUILD= cargo test --all-targets --all-features --workspace
+    - name: Cargo check
+      run: SKIP_WASM_BUILD= cargo check --all-targets --all-features --workspace
 
   fmt:
     runs-on: ubuntu-latest
