ci workflow fix
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         toolchain: ${{ env.nightly }}
         override: true
-        target: ${{wasm32-unknown-unknown}}
+        target: ${{ env.target }}
 
     - name: Cache cargo registry
       uses: actions/cache@v2.1.6
