runtime main & staking integration to node
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -3,7 +3,15 @@ authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 build = "build.rs"
 edition = "2018"
 name = "nodle-chain"
-version = "2.0.13"
+version = "2.0.12"
+
+[package.metadata.wasm-pack.profile.release]
+# `wasm-opt` has some problems on linux, see
+# https://github.com/rustwasm/wasm-pack/issues/781 etc.
+wasm-opt = false
+
+[package.metadata.docs.rs]
+targets = ["x86_64-unknown-linux-gnu"]
 
 [package.metadata.wasm-pack.profile.release]
 # `wasm-opt` has some problems on linux, see
