--- a/runtimes/main/Cargo.toml
+++ b/runtimes/main/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
-name = "runtime-main"
+name = "main-runtime"
 version = "2.0.13"
 
 [features]
