--- a/runtimes/staking/Cargo.toml
+++ b/runtimes/staking/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
-name = "runtime-staking"
+name = "staking-runtime"
 version = "2.0.13"
 
 [features]
