Review comments closure
Signed-off-by: R.RajeshKumar <rajesh@nodle.co>

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -29,8 +29,8 @@ cli = [
 	"substrate-build-script-utils",
 ]
 runtime-benchmarks = [
-	"main-runtime/runtime-benchmarks",
-	"staking-runtime/runtime-benchmarks",
+	"runtime-main/runtime-benchmarks",
+	"runtime-staking/runtime-benchmarks",
 	"frame-benchmarking-cli",
 ]
 
@@ -106,8 +106,8 @@ sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkad
 sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 primitives = { path = "../primitives" }
-main-runtime = { path = "../runtimes/main" }
-staking-runtime = { path = "../runtimes/staking" }
+runtime-main = { path = "../runtimes/main" }
+runtime-staking = { path = "../runtimes/staking" }
 pallet-root-of-trust-rpc = { path = "../pallets/root-of-trust/rpc" }
 pallet-staking = { default-features = false, path = "../pallets/staking", optional = true }
 
